[tool.poetry]
name = "fast_flow"
version = "0.1.0"
description = ""
authors = ["kiran <kirannadimpalli2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
celery= "5.3.6"
redis= "5.0.1"
flower= "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"